Fixes and Optimizations for accessibility & usability (#3)
* remove dead image code from products.html

* mend

* fix punction in intro.md

* prevent closing quotemark in citation from wrapping to next line (a bit hacky)

* adjust vita-image to always fill 100% of parent-height

* optimize vita-image responsiveness

* fix vita-image not showing on mobile by using mediaquery

* fix Umsatzsteuerbefreiung placement in contact

* remove topmargin-growth animation on details to improve accessibility

* switch div element to section for consistency

* improve accessibility by increasing contrast on some elements

* add contact-button after herotext

* give no alt text to decorative pictures and change alt text for headerimage

* remove dead css

--- a/_sass/blocks/cite.scss
+++ b/_sass/blocks/cite.scss
@@ -21,22 +21,22 @@
         content: "«";
       }
 
-      & > * {
+      &>* {
         display: inline;
         color: var(--beige-lighter);
         line-height: var(--lh-default);
       }
 
-      &::after {
-        display: inline-block;
-        margin-left: calc(var(--xxs) * -0.3);
+      &>p>span {
+        margin-left: calc(var(--xxs) * 0.3);
         color: var(--lighten);
-        content: "»";
+        white-space: nowrap;
       }
     }
 
     figcaption {
       font-size: var(--s);
+      color: var(--darkest);
     }
   }
 }
