--- a/_sass/components/details.scss
+++ b/_sass/components/details.scss
@@ -9,7 +9,7 @@ details {
     margin-left: calc(var(--l) * -1.2);
     list-style: none;
 
-    & > h3 {
+    &>h3 {
       display: inline-block;
     }
 
@@ -17,7 +17,9 @@ details {
       cursor: pointer;
     }
 
-    &::-webkit-details-marker { display: none; }
+    &::-webkit-details-marker {
+      display: none;
+    }
 
     &::before {
       position: absolute;
@@ -43,8 +45,7 @@ details {
   &[open] {
     padding-bottom: var(--l);
     border-bottom: solid var(--border-width-l) var(--border-color);
-    margin-top: var(--fluid-space-l);
-    margin-bottom: var(--fluid-space-l);
+    margin-bottom: var(--fluid-space-m);
     opacity: 1 !important;
 
     summary::before {
@@ -53,6 +54,6 @@ details {
   }
 }
 
-.vertical-stack:has(details[open]) > details {
+.vertical-stack:has(details[open])>details {
   opacity: var(--op-medium);
 }
